[project]
name = "isofits"
version = "0.0.6"
authors = [
  { name="Parker Greene", email="parkergreene16@gmail.com" },
]
description = "A package for calculating iso hole/shaft tolerances"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pgreene16/isofits"
Issues = "https://github.com/pgreene16/isofits/issues"